src/style.css
.banner {
    background-color: #537558;
}
.team_home {
    width: 33.33%; display: grid;
}
.message {
    background-color: #1073b5;
}
.content, .overlay {
    grid-area: 1/1
}

/* main page team anim */
.overlay img:hover {
    scale: 1.1;
    translate: 0 -5%;
}
.overlay img{
    transition: 1s ease;
}
/* anim end */

.hero-banner {
    background-image: linear-gradient(#1073b590, #1073b590), url("img/Offices.jpg");
    min-height: 300px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    position: relative;
}

.bios {
    background-color: #537558;
}

